process.exit(1)
EXIT_CODE: 1
--- STDOUT ---
[eval]:1
const http=require("http"); http.get("http://localhost:3001/brain-game.html",r=,r.statusCode); let d=""; r.on("data",c==c); r.on("end",()=,d.length,"First100:",d.substring(0,100)))}); setTimeout(()=,5000)
                                                                               ^

SyntaxError: Unexpected token ','
    at makeContextifyScript (node:internal/vm:185:14)
    at node:internal/process/execution:107:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_string:51:3

Node.js v20.20.2

--- STDERR ---

